--- a/src/pages/tools/dataexplorer/_datasets.yaml
+++ b/src/pages/tools/dataexplorer/_datasets.yaml
@@ -210,11 +210,11 @@ names:
       - label: CSV
       - label: JSON
   petfoodrecalls:
-    label: Petfood Recalls
-    path: petfoodrecalls
+    label: Petfood Reports
+    path: petfoodreports
     views:
       lltView:
-        label: LLT Frequency
+        label: Frequency of Reported Signs
         searchType: LLT
         columns:
           - Header: Product Name
@@ -226,14 +226,14 @@ names:
           - Header: Formulation
             accessor: formulation
             show: true
-          - Header: Clinical Sign
+          - Header: Reported Signs
             accessor: reaction
             show: true
-          - Header: LLT frequency
+          - Header: Frequency of Reported Signs
             accessor: frequency
             show: true
       listingRecalls:
-        label: Listing of recalls
+        label: Reports of Reactions
         searchType: nonLLT
         columns:
           - Header: Identifier
@@ -263,7 +263,7 @@ names:
           - Header: Report Year
             accessor: report_year
             show: true
-          - Header: Clinical Sign
+          - Header: Reported Signs
             accessor: reaction.clinical_sign
             show: true
             split: true
@@ -302,12 +302,15 @@ names:
     url: http://ec2-34-229-232-27.compute-1.amazonaws.com:8000
     filters:
       options:
-        - label: Report Year(s)
-          type: yearpicker
-          field: report_year
+        - label: Report Year (s)
+          field: report_year.exact
+          autocomplete_field: report_year
+          type: select_autocomplete
           can_query: true
+          remove_chars: report years
+          placeholder: Search Year
           query_type: term
-          placeholder: Select Year
+          limit: 100
         - label: Product Name
           field: product.name.exact
           autocomplete_field: product.name
@@ -317,60 +320,48 @@ names:
           placeholder: Search Product
           query_type: term
           limit: 100
-        - label: Flavor
-          field: product.flavor.exact
-          autocomplete_field: product.flavor
+        - label: Formulation
+          field: product.formulation.exact
+          autocomplete_field: product.formulation
           type: select_autocomplete
+          remove_chars: formulations
+          placeholder: Search Formulation
           can_query: true
-          remove_chars: flavors
-          placeholder: Search Flavor
           query_type: term
           limit: 100
-        - label: Formulation
-          field: product.formulation
-          autocomplete_field: product.forumulation
-          type: select
-          remove_chars: formulations
-          placeholder: Select Formulation
+        - label: Species
+          field: animal.species.exact
+          autocomplete_field: animal.species
+          type: select_autocomplete
+          remove_chars: species
+          placeholder: Search Species
           query_type: term
-          options:
-            - label: Bone
-              value: Bone
-            - label: Canned
-              value: Canned
-            - label: Dry
-              value: Dry
-            - label: Raw
-              value: Raw
-            - label: Treat
-              value: Treat
-            - label: Other
-              value: Other
-            - label: Dental
-              value: Dental
-            - label: Unknown
-              value: Unknown
-            - label: Pouched
-              value: Pouched
-            - label: Tubbed
-              value: Tubbed
-            - label: Tray
-              value: Tray
-            - label: Supplement
-              value: Supplement
-            - label: Semi-Moist
-              value: Semi-Moist
-            - label: Rolled
-              value: Rolled
-            - label: Raw; Bone
-              value: Raw; Bone
-        - label: Reactions(LLT)
+          limit: 100
+        - label: Breed
+          field: animal.breed.exact
+          autocomplete_field: animal.breed
+          type: select_autocomplete
+          can_query: true
+          remove_chars: breed
+          placeholder: Search Breed
+          query_type: term
+          limit: 100
+        - label: Reported Signs
           field: reaction.clinical_sign.exact
           autocomplete_field: reaction.clinical_sign
           type: select_autocomplete
           remove_chars: reactions
           can_query: true
-          placeholder: Search LLTs
+          placeholder: Search Reactions
+          query_type: term
+          limit: 100
+        - label: State
+          field: state.exact
+          autocomplete_field: state
+          type: select_autocomplete
+          can_query: true
+          remove_chars: state
+          placeholder: Search State (s)
           query_type: term
           limit: 100
     exportOptions:
