--- a/src/pages/tools/dataexplorer/_datasets.yaml
+++ b/src/pages/tools/dataexplorer/_datasets.yaml
@@ -268,7 +268,11 @@ names:
       lltView:
         label: Frequency of Reported Signs
         searchType: LLT
-        help_text: This is llt pet food placeholder help text.
+        help_text:
+          - "There are two ways to explore the Pet Food Reports data: in a table or visualized in a variety of charts."
+          - "The default view is the table, which allows you to click on individual columns to sort the table by those results. The table displays 25 rows by default, but that number can be modified through a dropdown list. The next and previous buttons allow you to navigate through the all of the available data; you can also directly input what 'page' of data you'd like to view. Each row in the Frequency of Reported Signs view allows you to drill down into the nested data by clicking the arrows left of the row. The final major feature of the table view is the ability to export results in CSV or XLS format."
+          - "The chart view visualizes data in one of two charts: Incidents by Year, a line chart which displays the selected data elements over time, and Total Reports, a bar chart which counts the total number of reports for whatever data element you select."
+          - "Both table and chart allow you to narrow down the results displayed through the use of the filter panel on the left side of the screen. Any number of filters may be applied and each will narrow down the data accordingly. After selecting your desired filters simply press the Apply Filters button in the middle of the screen. If you don't wish to apply those filters, press the Clear All button. After applying filters, they'll be displayed above the table or chart, and can be removed individually or as a whole; removing filters in either of these ways is done automatically without needing to press Apply Filters. Please note that some combinations of specific filters may result in no data matching the total filter criteria and no results being displayed."
         show_collapse_rows_button: false
         hide_manage_columns: true
         columns:
@@ -307,7 +311,11 @@ names:
       listingRecalls:
         label: Reports of Reactions
         searchType: nonLLT
-        help_text: This is nonLLT pet food placeholder help text.
+        help_text:
+          - "There are two ways to explore the Pet Food Reports data: in a table or visualized in a variety of charts."
+          - "The default view is the table, which allows you to click on individual columns to sort the table by those results. The table displays 25 rows by default, but that number can be modified through a dropdown list. The next and previous buttons allow you to navigate through the all of the available data; you can also directly input what 'page' of data you'd like to view. The final major feature of the table view is the ability to export results in CSV or XLS format."
+          - "The chart view visualizes data in one of two charts: Incidents by Year, a line chart which displays the selected data elements over time, and Total Reports, a bar chart which counts the total number of reports for whatever data element you select."
+          - "Both table and chart allow you to narrow down the results displayed through the use of the filter panel on the left side of the screen. Any number of filters may be applied and each will narrow down the data accordingly. After selecting your desired filters simply press the Apply Filters button in the middle of the screen. If you don't wish to apply those filters, press the Clear All button. After applying filters, they'll be displayed above the table or chart, and can be removed individually or as a whole; removing filters in either of these ways is done automatically without needing to press Apply Filters. Please note that some combinations of specific filters may result in no data matching the total filter criteria and no results being displayed."
         show_collapse_rows_button: false
         columns:
           - Header: Identifier
@@ -471,7 +479,11 @@ names:
       tableView:
         label:
         searchType: nonLLT
-        help_text: This is Phish Pharm non LLT placeholder help text.
+        help_text:
+          - "There are two ways to explore the Phish-Pharm data: in a table or visualized in a variety of charts."
+          - "The default view is the table, which allows you to click on individual columns to sort the table by those results. The table displays 25 rows by default, but that number can be modified through a dropdown list. The next and previous buttons allow you to navigate through the all of the available data; you can also directly input what 'page' of data you'd like to view. The final major feature of the table view is the ability to export results in CSV or XLS format."
+          - "The chart view visualizes data in one of two charts: Half Life, a bar chart which counts the total number of reports for whatever data element you select, and Number of Drugs by Year, a line chart which displays the selected data elements over time."
+          - "Both table and chart allow you to narrow down the results displayed through the use of the filter panel on the left side of the screen. Any number of filters may be applied and each will narrow down the data accordingly. After selecting your desired filters simply press the Apply Filters button in the middle of the screen. If you don't wish to apply those filters, press the Clear All button. After applying filters, they'll be displayed above the table or chart, and can be removed individually or as a whole; removing filters in either of these ways is done automatically without needing to press Apply Filters. Please note that some combinations of specific filters may result in no data matching the total filter criteria and no results being displayed."
         show_collapse_rows_button: false
         columns:
           - Header: Drug/Chem
