--- a/src/constants/fields/master_fields.yaml
+++ b/src/constants/fields/master_fields.yaml
@@ -2943,14 +2943,92 @@ device:
     type: object
   recall:
     properties:
+      event_date_initiated:
+        description: "Date that the firm first began notifying the public or their consignees of the recall."
+        format: date
+        is_exact: false
+        possible_values:
+        type: string
+      event_date_created:
+        description: "Date on which the recall record was created in the FDA database."
+        format: date
+        is_exact: false
+        possible_values:
+        type: string
+      event_date_posted:
+        description: "Indicates the date FDA classified the recall, but it does not necessarily mean that the recall is new."
+        format: date
+        is_exact: false
+        possible_values:
+        type: string
       event_date_terminated:
         description: "Date that FDA determined recall actions were completed and terminated the recall. For details about termination of a recall see [here](http://www.accessdata.fda.gov/scripts/cdrh/cfdocs/cfcfr/cfrsearch.cfm?fr=7.55)."
         format: date
         is_exact: false
         possible_values:
         type: string
+      recall_status:
+        description: "Current status of the recall. A record in the database is created when a firm initiates a correction or removal action.  The record is updated if the FDA identifies a violation and classifies the action as a recall, and it is updated for a final time when the recall is terminated."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      recalling_firm:
+        description: "The firm that initiates a recall or, in the case of an FDA requested recall or FDA mandated recall, the firm that has primary responsibility for the manufacture and (or) marketing of the product to be recalled. This field may also include the firm's full address (normally in case of international addresses)"
+        format:
+        is_exact: true
+        possible_values:
+        type: string
       firm_fei_number:
         description: "Facility identifier assigned to facility by the FDA Office of Regulatory Affairs."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      address_1:
+        description: "Street address (Line 1) of the Recalling Firm, if available."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      address_2:
+        description: "Street address (Line 2) of the Recalling Firm, if available."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      city:
+        description: "City of the Recalling Firm, if available."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      state:
+        description: "US state of the Recalling Firm, if available."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      postal_code:
+        description: "ZIP or postal code of the Recalling Firm, if available."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      country:
+        description: "Country of the Recalling Firm, if available."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      additional_info_contact:
+        description: "Contact information of the party that can be used to request additional information about the recall."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      reason_for_recall:
+        description: "Information describing how the product is defective and violates the FD&C Act or related statutes."
         format:
         is_exact: false
         possible_values:
@@ -3042,6 +3120,18 @@ device:
           is_exact: true
           possible_values:
           type: string
+      product_description:
+        description: "Brief description of the product being recalled."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      code_info:
+        description: "A list of all lot and/or serial numbers, product numbers, packer or manufacturer numbers, sell or use by dates, etc., which appear on the product or its labeling."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
       product_code:
         description: "A three-letter identifier assigned to a device category. Assignment is based upon the medical device classification designated under 21 CFR Parts 862-892, and the technology and intended use of the device. Occasionally these codes are changed over time."
         format:
@@ -3054,6 +3144,18 @@ device:
         is_exact: true
         possible_values:
         type: string
+      product_quantity:
+        description: "The amount of defective product subject to recall."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
+      distribution_pattern:
+        description: "General area of initial distribution such as, “Distributors in 6 states: NY, VA, TX, GA, FL and MA; the Virgin Islands; Canada and Japan”. The term “nationwide” is defined to mean the fifty states or a significant portion.  Note that subsequent distribution by the consignees to other parties may not be included."
+        format:
+        is_exact: false
+        possible_values:
+        type: string
       res_event_number:
         description: "A five digit, numerical designation assigned by FDA to a specific recall event used for tracking purposes."
         format:
@@ -3064,6 +3166,12 @@ device:
         description: "FDA determined general type of recall cause. Per FDA policy, recall cause determinations are subject to modification up to the point of termination of the recall."
         format:
         is_exact: true
+        possible_values:
+        type: string
+      action:
+        description: "Action taken as part of the recall."
+        format:
+        is_exact: false
         possible_values:
         type: string
       meta:
