--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby": "^2.0.0",
     "gatsby-link": "^2.7.0",
     "gatsby-plugin-flow": "^1.6.0",
+    "gatsby-plugin-layout": "^1.6.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-stylus": "^2.6.0",
     "gatsby-remark-autolink-headers": "^2.7.0",
