--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-document-title": "^2.0.3",
     "react-helmet": "^5.1.3",
-    "react-highlight": "^0.10.0",
+    "react-highlight.js": "^1.0.7",
     "react-joyride": "^2.0.5",
     "react-modal": "^3.1.0",
     "react-promise": "2.0.0",
